# defiant-core

./: BUILD.gn  DEPS  README.md  brave_paks.gni  package-lock.json  package.json  tsconfig.json
app/: app_management_strings.grdp  bookmarks_strings.grdp  brave_command_ids.h  brave_exe.ver  brave_generated_resources.grd  brave_strings.grd  components_brave_strings.grd  extensions_strings.grdp  file_manager_strings.grdp  generated_resources.grd  media_router_strings.grdp  nux_strings.grdp  onboarding_welcome_strings.grdp  printing_strings.grdp  (+6 more)
components/thehive_extension/: BUILD.gn
components/thehive_extension/extension/: resources.grd
components/thehive_extension/extension/thehive_extension/: BUILD.gn  manifest.json
components/thehive_extension/extension/thehive_extension/background/: background.html  background.js
components/thehive_extension/extension/thehive_extension/content/all/script/: script.js
components/thehive_extension/extension/thehive_extension/content/reddit/script/: script.js
components/thehive_extension/extension/thehive_extension/content/twitter/script/: script.js
components/thehive_extension/extension/thehive_extension/content/wikipedia/script/: script.js
components/thehive_extension/extension/thehive_extension/content/youtube/script/: script.js
components/thehive_extension/extension/thehive_extension/newtab/: newtab.css  newtab.html  newtab.js
components/thehive_extension/extension/thehive_extension/options/: options.html  options.js
components/thehive_extension/extension/thehive_extension/popup/: popup.html  popup.js
(+423 files in other folders)
